[metadata]
name = finitude
version = 0.1.0
author = Daniel Dulitz
author_email = dulitz@gmail.com
description = Controls and shows status of Carrier Infinity and Bryant Evolution HVAC systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dulitz/finitude
project_urls =
    Wiki = https://github.com/dulitz/finitude/wiki
    Bug Tracker = https://github.com/dulitz/finitude/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = finitude
python_requires = >=3.7
install_requires =
    pyserial
    prometheus_client
    PyYAML
include_package_data = True
